# bevy_snake

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
