[package]
name = "bevy_snake"
version = "0.1.0"
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1"
rand = "*"

[profile.dev]
# opt-level = 1               # Use slightly better optimizations.
# overflow-checks = false     # Disable integer overflow checks.
